--- a/Tempus.html
+++ b/Tempus.html
@@ -12,6 +12,7 @@
         <div id="timers-container"></div>
         <button id="add-timer">Agregar Temporizador</button>
     </div>
+    <audio id="alarm-sound" src="sound/alarm.mp3"></audio>
     <script src="js/script.js"></script>
 </body>
 </html>
