Implementada ordenación de temporizadores por tiempo restante

--- a/Tempus.html
+++ b/Tempus.html
@@ -11,6 +11,7 @@
         <h1>Temporizador Múltiple</h1>
         <div id="timers-container"></div>
         <button id="add-timer">Agregar Temporizador</button>
+        <button id="sort-timers">Ordenar Temporizadores</button>
     </div>
     <audio id="alarm-sound" src="sound/alarm.mp3"></audio>
     <script src="js/script.js"></script>
