Añadida posibilidad de guardar y cargar temporizadores

--- a/Tempus.html
+++ b/Tempus.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temporizador Múltiple</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Temporizador Múltiple</h1>
         <div id="timers-container"></div>
         <button id="add-timer">Agregar Temporizador</button>
         <button id="sort-timers">Ordenar Temporizadores</button>
+        <button id="save-timers">Guardar Temporizadores</button>
+        <input type="file" id="load-timers" accept=".json">
+        <label for="load-timers">Cargar Temporizadores</label>
     </div>
     <audio id="alarm-sound" src="sound/alarm.mp3"></audio>
     <script src="js/script.js"></script>
 </body>
+
 </html>
